[package]
name = "test_sfxdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version="1.1.1",features=["derive"]}

solana-program = "1.17.3"
solana-program-test = "1.17.3"
solana-sdk = "1.17.3"
spl-token = "4.0.0"
spl-associated-token-account = { version="2.0.0" }
